Did all of the static blocks, not keyboard updates to blocks.
Related Work Items: #65, #83

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -41,16 +41,22 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BlockObjects\BaseUseableBlock.cs" />
     <Compile Include="BlockObjects\BaseBlock.cs" />
-    <Compile Include="BlockObjects\States\Destroied.cs" />
-    <Compile Include="BlockObjects\States\Hidden.cs" />
-    <Compile Include="BlockObjects\States\Silent.cs" />
-    <Compile Include="BlockObjects\States\Used.cs" />
-    <Compile Include="BlockObjects\Brick.cs" />
-    <Compile Include="BlockObjects\Floor.cs" />
-    <Compile Include="BlockObjects\Question.cs" />
-    <Compile Include="BlockObjects\Stair.cs" />
+    <Compile Include="BlockObjects\BrickStates\BrickDestroyed.cs" />
+    <Compile Include="BlockObjects\BrickStates\BrickHidden.cs" />
+    <Compile Include="BlockObjects\BrickStates\BrickSilent.cs" />
+    <Compile Include="BlockObjects\BrickStates\BrickUsed.cs" />
+    <Compile Include="BlockObjects\BrickBlock.cs" />
+    <Compile Include="BlockObjects\FloorBlock.cs" />
+    <Compile Include="BlockObjects\FloorStates\FloorHidden.cs" />
+    <Compile Include="BlockObjects\FloorStates\FloorSilent.cs" />
+    <Compile Include="BlockObjects\QuestionBlock.cs" />
+    <Compile Include="BlockObjects\QuestionStates\QuestionHidden.cs" />
+    <Compile Include="BlockObjects\QuestionStates\QuestionSilent.cs" />
+    <Compile Include="BlockObjects\QuestionStates\QuestionUsed.cs" />
+    <Compile Include="BlockObjects\StairBlock.cs" />
+    <Compile Include="BlockObjects\StairStates\StairHidden.cs" />
+    <Compile Include="BlockObjects\StairStates\StairSilent.cs" />
     <Compile Include="Commands\BaseCommand.cs" />
     <Compile Include="Commands\ActionCommand.cs" />
     <Compile Include="Commands\CrouchCommand.cs" />
@@ -98,6 +104,7 @@
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaDefeated.cs" />
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaJumpOn.cs" />
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaNormal.cs" />
+    <Compile Include="Sprites\BlockSprites\BlockSilentSprite.cs" />
     <Compile Include="Sprites\CoinSprite.cs" />
     <Compile Include="Sprites\FireFlowerSprite.cs" />
     <Compile Include="Sprites\GreenKoopaSprite.cs" />
@@ -128,12 +135,7 @@
     <Compile Include="MarioObjects\States\Super\Right\SuperJumpingRight.cs" />
     <Compile Include="MarioObjects\States\Super\Right\SuperWalkingRight.cs" />
     <Compile Include="Sprites\AnimatedSprite.cs" />
-    <Compile Include="Sprites\BrickSprite.cs" />
-    <Compile Include="Sprites\DestroyingSprite.cs" />
-    <Compile Include="Sprites\FloorSprite.cs" />
     <Compile Include="Sprites\GoombaSprite.cs" />
-    <Compile Include="Sprites\QuestionSprite.cs" />
-    <Compile Include="Sprites\StairSprite.cs" />
     <Compile Include="Sprites\StartSprite.cs" />
     <Compile Include="Sprites\StaticSprite.cs" />
     <Compile Include="Commands\BrickBlockCommand.cs" />
@@ -142,10 +144,9 @@
     <Compile Include="Commands\DeadStateCommand.cs" />
     <Compile Include="Commands\FireStateCommand.cs" />
     <Compile Include="Sprites\SuperMushroomSprite.cs" />
-    <Compile Include="Sprites\UsedQuestionSprite.cs" />
     <Compile Include="EnemyObjects\BaseEnemy.cs" />
     <Compile Include="Theming\GameModel.cs" />
-    <Compile Include="Theming\Script.cs" />
+    <Compile Include="Theming\GameScript.cs" />
     <Compile Include="Interfaces\ICommand.cs" />
     <Compile Include="Controllers\GamePadController.cs" />
     <Compile Include="Interfaces\IController.cs" />
@@ -164,6 +165,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\BlockSheet.png" />
     <Content Include="Content\Dead.png" />
     <Content Include="Content\FireCrouchingLeft.png" />
     <Content Include="Content\FireCrouchingRight.png" />
@@ -173,6 +175,12 @@
     <Content Include="Content\FireJumpingRight.png" />
     <Content Include="Content\FireWalkingLeft.png" />
     <Content Include="Content\FireWalkingRight.png" />
+    <Content Include="Content\StandardIdleLeft.png" />
+    <Content Include="Content\StandardIdleRight.png" />
+    <Content Include="Content\StandardJumpingLeft.png" />
+    <Content Include="Content\StandardJumpingRight.png" />
+    <Content Include="Content\StandardWalkingLeft.png" />
+    <Content Include="Content\StandardWalkingRight.png" />
     <Content Include="Content\SuperCrouchingLeft.png" />
     <Content Include="Content\SuperCrouchingRight.png" />
     <Content Include="Content\SuperIdleLeft.png" />
@@ -186,89 +194,6 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
-    <None Include="Content\bin\Windows\Dead.xnb" />
-    <None Include="Content\bin\Windows\FireCrouchingLeft.xnb" />
-    <None Include="Content\bin\Windows\FireCrouchingRight.xnb" />
-    <None Include="Content\bin\Windows\FireFallingLeft.xnb" />
-    <None Include="Content\bin\Windows\FireFallingRight.xnb" />
-    <None Include="Content\bin\Windows\FireIdleLeft.xnb" />
-    <None Include="Content\bin\Windows\FireIdleRight.xnb" />
-    <None Include="Content\bin\Windows\FireJumpingLeft.xnb" />
-    <None Include="Content\bin\Windows\FireJumpingRight.xnb" />
-    <None Include="Content\bin\Windows\FireWalkingLeft.xnb" />
-    <None Include="Content\bin\Windows\FireWalkingRight.xnb" />
-    <None Include="Content\bin\Windows\InvincibleCrouchingLeft.xnb" />
-    <None Include="Content\bin\Windows\InvincibleCrouchingRight.xnb" />
-    <None Include="Content\bin\Windows\InvincibleFallingLeft.xnb" />
-    <None Include="Content\bin\Windows\InvincibleFallingRight.xnb" />
-    <None Include="Content\bin\Windows\InvincibleIdleLeft.xnb" />
-    <None Include="Content\bin\Windows\InvincibleIdleRight.xnb" />
-    <None Include="Content\bin\Windows\InvincibleJumpingLeft.xnb" />
-    <None Include="Content\bin\Windows\InvincibleJumpingRight.xnb" />
-    <None Include="Content\bin\Windows\InvincibleWalkingLeft.xnb" />
-    <None Include="Content\bin\Windows\InvincibleWalkingRight.xnb" />
-    <None Include="Content\bin\Windows\StandardCrouchingLeft.xnb" />
-    <None Include="Content\bin\Windows\StandardCrouchingRight.xnb" />
-    <None Include="Content\bin\Windows\StandardFallingLeft.xnb" />
-    <None Include="Content\bin\Windows\StandardFallingRight.xnb" />
-    <None Include="Content\bin\Windows\StandardIdleLeft.xnb" />
-    <None Include="Content\bin\Windows\StandardIdleRight.xnb" />
-    <None Include="Content\bin\Windows\StandardJumpingLeft.xnb" />
-    <None Include="Content\bin\Windows\StandardJumpingRight.xnb" />
-    <None Include="Content\bin\Windows\StandardWalkingLeft.xnb" />
-    <None Include="Content\bin\Windows\StandardWalkingRight.xnb" />
-    <None Include="Content\bin\Windows\SuperCrouchingLeft.xnb" />
-    <None Include="Content\bin\Windows\SuperCrouchingRight.xnb" />
-    <None Include="Content\bin\Windows\SuperFallingLeft.xnb" />
-    <None Include="Content\bin\Windows\SuperFallingRight.xnb" />
-    <None Include="Content\bin\Windows\SuperIdleLeft.xnb" />
-    <None Include="Content\bin\Windows\SuperIdleRight.xnb" />
-    <None Include="Content\bin\Windows\SuperJumpingLeft.xnb" />
-    <None Include="Content\bin\Windows\SuperJumpingRight.xnb" />
-    <None Include="Content\bin\Windows\SuperWalkingLeft.xnb" />
-    <None Include="Content\bin\Windows\SuperWalkingRight.xnb" />
-    <None Include="Content\obj\Windows\.mgcontent" />
-    <None Include="Content\obj\Windows\Dead.mgcontent" />
-    <None Include="Content\obj\Windows\FireCrouchingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\FireCrouchingRight.mgcontent" />
-    <None Include="Content\obj\Windows\FireFallingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\FireFallingRight.mgcontent" />
-    <None Include="Content\obj\Windows\FireIdleLeft.mgcontent" />
-    <None Include="Content\obj\Windows\FireIdleRight.mgcontent" />
-    <None Include="Content\obj\Windows\FireJumpingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\FireJumpingRight.mgcontent" />
-    <None Include="Content\obj\Windows\FireWalkingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\FireWalkingRight.mgcontent" />
-    <None Include="Content\obj\Windows\InvincibleCrouchingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\InvincibleCrouchingRight.mgcontent" />
-    <None Include="Content\obj\Windows\InvincibleFallingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\InvincibleFallingRight.mgcontent" />
-    <None Include="Content\obj\Windows\InvincibleIdleLeft.mgcontent" />
-    <None Include="Content\obj\Windows\InvincibleIdleRight.mgcontent" />
-    <None Include="Content\obj\Windows\InvincibleJumpingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\InvincibleJumpingRight.mgcontent" />
-    <None Include="Content\obj\Windows\InvincibleWalkingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\InvincibleWalkingRight.mgcontent" />
-    <None Include="Content\obj\Windows\StandardCrouchingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\StandardCrouchingRight.mgcontent" />
-    <None Include="Content\obj\Windows\StandardFallingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\StandardFallingRight.mgcontent" />
-    <None Include="Content\obj\Windows\StandardIdleLeft.mgcontent" />
-    <None Include="Content\obj\Windows\StandardIdleRight.mgcontent" />
-    <None Include="Content\obj\Windows\StandardJumpingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\StandardJumpingRight.mgcontent" />
-    <None Include="Content\obj\Windows\StandardWalkingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\StandardWalkingRight.mgcontent" />
-    <None Include="Content\obj\Windows\SuperCrouchingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\SuperCrouchingRight.mgcontent" />
-    <None Include="Content\obj\Windows\SuperFallingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\SuperFallingRight.mgcontent" />
-    <None Include="Content\obj\Windows\SuperIdleLeft.mgcontent" />
-    <None Include="Content\obj\Windows\SuperIdleRight.mgcontent" />
-    <None Include="Content\obj\Windows\SuperJumpingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\SuperJumpingRight.mgcontent" />
-    <None Include="Content\obj\Windows\SuperWalkingLeft.mgcontent" />
-    <None Include="Content\obj\Windows\SuperWalkingRight.mgcontent" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
