--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -106,6 +106,9 @@
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaDefeated.cs" />
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaJumpOn.cs" />
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaNormal.cs" />
+    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Sprites\BlockSprites\BlockSilentSprite.cs" />
     <Compile Include="Sprites\BlockSprites\BrickPieceSprite.cs" />
     <Compile Include="Sprites\CoinSprite.cs" />
@@ -168,6 +171,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Windows\x86\Debug\MelloMario.exe" />
+    <Content Include="bin\Windows\x86\Debug\MelloMario.pdb" />
+    <Content Include="bin\Windows\x86\Debug\MonoGame.Framework.dll" />
+    <Content Include="bin\Windows\x86\Debug\MonoGame.Framework.xml" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.Direct2D1.dll" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.Direct2D1.xml" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.Direct3D11.dll" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.Direct3D11.xml" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.dll" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.DXGI.dll" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.DXGI.xml" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.MediaFoundation.dll" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.MediaFoundation.xml" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.XAudio2.dll" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.XAudio2.xml" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.XInput.dll" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.XInput.xml" />
+    <Content Include="bin\Windows\x86\Debug\SharpDX.xml" />
     <Content Include="Content\BrickPieces.png" />
     <Content Include="Content\OneUpMushroom.png" />
     <Content Include="Content\BlockSheet.png" />
@@ -206,8 +227,160 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
+    <None Include="bin\Windows\x86\Debug\Content\Dead.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\FireCrouchingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\FireCrouchingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\FireFallingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\FireFallingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\FireIdleLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\FireIdleRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\FireJumpingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\FireJumpingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\FireWalkingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\FireWalkingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\InvincibleCrouchingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\InvincibleCrouchingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\InvincibleFallingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\InvincibleFallingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\InvincibleIdleLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\InvincibleIdleRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\InvincibleJumpingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\InvincibleJumpingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\InvincibleWalkingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\InvincibleWalkingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\StandardCrouchingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\StandardCrouchingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\StandardFallingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\StandardFallingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\StandardIdleLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\StandardIdleRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\StandardJumpingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\StandardJumpingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\StandardWalkingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\StandardWalkingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\SuperCrouchingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\SuperCrouchingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\SuperFallingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\SuperFallingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\SuperIdleLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\SuperIdleRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\SuperJumpingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\SuperJumpingRight.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\SuperWalkingLeft.xnb" />
+    <None Include="bin\Windows\x86\Debug\Content\SuperWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\1-UpMashroom.xnb" />
+    <None Include="Content\bin\Windows\Content\coin.xnb" />
+    <None Include="Content\bin\Windows\Content\Dead.xnb" />
+    <None Include="Content\bin\Windows\Content\FireCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\FireCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\FireFallingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\FireFallingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\fireFlower.xnb" />
+    <None Include="Content\bin\Windows\Content\FireIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\FireIdleRight.xnb" />
+    <None Include="Content\bin\Windows\Content\FireJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\FireJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\FireWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\FireWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\goomba.xnb" />
+    <None Include="Content\bin\Windows\Content\greenKoopa.xnb" />
+    <None Include="Content\bin\Windows\Content\InvincibleCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\InvincibleCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\InvincibleFallingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\InvincibleFallingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\InvincibleIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\InvincibleIdleRight.xnb" />
+    <None Include="Content\bin\Windows\Content\InvincibleJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\InvincibleJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\InvincibleWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\InvincibleWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\redKoopa.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardFallingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardFallingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardIdleRight.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\star.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperFallingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperFallingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperIdleRight.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\superMashroom.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperWalkingRight.xnb" />
+    <None Include="Content\obj\Windows\Content\.mgcontent" />
+    <None Include="Content\obj\Windows\Content\1-UpMashroom.mgcontent" />
+    <None Include="Content\obj\Windows\Content\coin.mgcontent" />
+    <None Include="Content\obj\Windows\Content\Dead.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireFallingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireFallingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\fireFlower.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireWalkingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\goomba.mgcontent" />
+    <None Include="Content\obj\Windows\Content\greenKoopa.mgcontent" />
+    <None Include="Content\obj\Windows\Content\InvincibleCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\InvincibleCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\InvincibleFallingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\InvincibleFallingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\InvincibleIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\InvincibleIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\InvincibleJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\InvincibleJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\InvincibleWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\InvincibleWalkingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\redKoopa.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardFallingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardFallingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardWalkingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\star.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperFallingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperFallingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\superMashroom.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperWalkingRight.mgcontent" />
+    <None Include="obj\x86\Release\MelloMario.csproj.CoreCompileInputs.cache" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="bin\Windows\x86\Release\" />
+    <Folder Include="MarioPlayerObject\" />
+    <Folder Include="MarioStates\Dead\" />
+    <Folder Include="MarioStates\Fire\Left\" />
+    <Folder Include="MarioStates\Fire\Right\" />
+    <Folder Include="MarioStates\Standard\Left\" />
+    <Folder Include="MarioStates\Standard\Right\" />
+    <Folder Include="MarioStates\Super\Left\" />
+    <Folder Include="MarioStates\Super\Right\" />
+    <Folder Include="PowerUps\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
