--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -171,6 +171,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CodeReviews\CodeReviewMaltsev1.txt" />
+    <Content Include="CodeReviews\CodeReviewXu1.txt" />
     <Content Include="Content\BrickPieces.png" />
     <Content Include="Content\OneUpMushroom.png" />
     <Content Include="Content\BlockSheet.png" />
