--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -51,6 +51,8 @@
     <Compile Include="BlockObjects\FloorBlock.cs" />
     <Compile Include="BlockObjects\FloorStates\FloorHidden.cs" />
     <Compile Include="BlockObjects\FloorStates\FloorSilent.cs" />
+    <Compile Include="BlockObjects\PipelineBlock.cs" />
+    <Compile Include="BlockObjects\PipelineStates\PipelineSilent.cs" />
     <Compile Include="BlockObjects\QuestionBlock.cs" />
     <Compile Include="BlockObjects\QuestionStates\QuestionBumped.cs" />
     <Compile Include="BlockObjects\QuestionStates\QuestionHidden.cs" />
