Update class names of state classes.

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -74,8 +74,8 @@
     <Compile Include="Factories\CommandFactory.cs" />
     <Compile Include="Factories\SpriteFactory.cs" />
     <Compile Include="EnemyObjects\Goomba.cs" />
-    <Compile Include="EnemyObjects\GoombaStates\Defeated.cs" />
-    <Compile Include="EnemyObjects\GoombaStates\Normal.cs" />
+    <Compile Include="EnemyObjects\GoombaStates\GoombaDefeated.cs" />
+    <Compile Include="EnemyObjects\GoombaStates\GoombaNormal.cs" />
     <Compile Include="Interfaces\ICommandFactory.cs" />
     <Compile Include="Interfaces\IGoombaState.cs" />
     <Compile Include="Interfaces\IGameObject.cs" />
@@ -87,21 +87,21 @@
     <Compile Include="Interfaces\ISpriteFactory.cs" />
     <Compile Include="ItemObjects\BaseItem.cs" />
     <Compile Include="ItemObjects\Coin.cs" />
-    <Compile Include="ItemObjects\CoinStates\Defeated.cs" />
-    <Compile Include="ItemObjects\CoinStates\Normal.cs" />
+    <Compile Include="ItemObjects\CoinStates\CoinDefeated.cs" />
+    <Compile Include="ItemObjects\CoinStates\CoinNormal.cs" />
     <Compile Include="ItemObjects\FireFlower.cs" />
-    <Compile Include="ItemObjects\FireFlowerStates\Defeated.cs" />
-    <Compile Include="ItemObjects\FireFlowerStates\Normal.cs" />
-    <Compile Include="ItemObjects\FireFlowerStates\Unveil.cs" />
+    <Compile Include="ItemObjects\FireFlowerStates\FireFlowerDefeated.cs" />
+    <Compile Include="ItemObjects\FireFlowerStates\FireFlowerNormal.cs" />
+    <Compile Include="ItemObjects\FireFlowerStates\FireFlowerUnveil.cs" />
     <Compile Include="ItemObjects\OneUpMushroom.cs" />
-    <Compile Include="ItemObjects\OneUpMushroomStates\Defeated.cs" />
-    <Compile Include="ItemObjects\OneUpMushroomStates\Normal.cs" />
+    <Compile Include="ItemObjects\OneUpMushroomStates\OneUpMushroomDefeated.cs" />
+    <Compile Include="ItemObjects\OneUpMushroomStates\OneUpNormal.cs" />
     <Compile Include="ItemObjects\Star.cs" />
-    <Compile Include="ItemObjects\StarStates\Defeated.cs" />
-    <Compile Include="ItemObjects\StarStates\Normal.cs" />
+    <Compile Include="ItemObjects\StarStates\StarDefeated.cs" />
+    <Compile Include="ItemObjects\StarStates\StarNormal.cs" />
     <Compile Include="ItemObjects\SuperMushroom.cs" />
-    <Compile Include="ItemObjects\SuperMushroomStates\Defeated.cs" />
-    <Compile Include="ItemObjects\SuperMushroomStates\Normal.cs" />
+    <Compile Include="ItemObjects\SuperMushroomStates\SuperMushroomDefeated.cs" />
+    <Compile Include="ItemObjects\SuperMushroomStates\SuperMushroomNormal.cs" />
     <Compile Include="EnemyObjects\GreenKoopa.cs" />
     <Compile Include="EnemyObjects\RedKoopa.cs" />
     <Compile Include="EnemyObjects\KoopaStates\GreenKoopaDefeated.cs" />
@@ -111,6 +111,11 @@
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaJumpOn.cs" />
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaNormal.cs" />
     <Compile Include="LevelGen\LevelReader.cs" />
+    <Compile Include="MarioObjects\DirectionStates\DirectionRight.cs" />
+    <Compile Include="MarioObjects\DirectionStates\DirectionLeft.cs" />
+    <Compile Include="MarioObjects\PowerUpStates\PowerUpDead.cs" />
+    <Compile Include="MarioObjects\PowerUpStates\PowerUpFire.cs" />
+    <Compile Include="MarioObjects\PowerUpStates\PowerUpStandard.cs" />
     <Compile Include="Sprites\BlockSprites\BlockAnimatedSprite.cs" />
     <Compile Include="Sprites\BlockSprites\BlockSilentSprite.cs" />
     <Compile Include="Sprites\BlockSprites\BrickPieceSprite.cs" />
@@ -120,29 +125,11 @@
     <Compile Include="Sprites\OneUpMushroomSprite.cs" />
     <Compile Include="Sprites\RedKoopaSprite.cs" />
     <Compile Include="MarioObjects\Mario.cs" />
-    <Compile Include="MarioObjects\States\Dead\Dead.cs" />
-    <Compile Include="MarioObjects\States\Fire\Left\FireCrouchingLeft.cs" />
-    <Compile Include="MarioObjects\States\Fire\Left\FireIdleLeft.cs" />
-    <Compile Include="MarioObjects\States\Fire\Left\FireJumpingLeft.cs" />
-    <Compile Include="MarioObjects\States\Fire\Left\FireWalkingLeft.cs" />
-    <Compile Include="MarioObjects\States\Fire\Right\FireCrouchingRight.cs" />
-    <Compile Include="MarioObjects\States\Fire\Right\FireIdleRight.cs" />
-    <Compile Include="MarioObjects\States\Fire\Right\FireJumpingRight.cs" />
-    <Compile Include="MarioObjects\States\Fire\Right\FireWalkingRight.cs" />
-    <Compile Include="MarioObjects\States\Standard\Left\StandardIdleLeft.cs" />
-    <Compile Include="MarioObjects\States\Standard\Left\StandardJumpingLeft.cs" />
-    <Compile Include="MarioObjects\States\Standard\Left\StandardWalkingLeft.cs" />
-    <Compile Include="MarioObjects\States\Standard\Right\StandardIdleRight.cs" />
-    <Compile Include="MarioObjects\States\Standard\Right\StandardJumpingRight.cs" />
-    <Compile Include="MarioObjects\States\Standard\Right\StandardWalkingRight.cs" />
-    <Compile Include="MarioObjects\States\Super\Left\SuperCrouchingLeft.cs" />
-    <Compile Include="MarioObjects\States\Super\Left\SuperIdleLeft.cs" />
-    <Compile Include="MarioObjects\States\Super\Left\SuperJumpingLeft.cs" />
-    <Compile Include="MarioObjects\States\Super\Left\SuperWalkingLeft.cs" />
-    <Compile Include="MarioObjects\States\Super\Right\SuperCrouchingRight.cs" />
-    <Compile Include="MarioObjects\States\Super\Right\SuperIdleRight.cs" />
-    <Compile Include="MarioObjects\States\Super\Right\SuperJumpingRight.cs" />
-    <Compile Include="MarioObjects\States\Super\Right\SuperWalkingRight.cs" />
+    <Compile Include="MarioObjects\MovementStates\MovementCrouching.cs" />
+    <Compile Include="MarioObjects\MovementStates\MovementIdle.cs" />
+    <Compile Include="MarioObjects\MovementStates\MovementJumping.cs" />
+    <Compile Include="MarioObjects\MovementStates\MovementWalking.cs" />
+    <Compile Include="MarioObjects\PowerUpStates\PowerUpSuper.cs" />
     <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\GoombaSprite.cs" />
     <Compile Include="Sprites\StartSprite.cs" />
@@ -174,9 +161,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CodeReviews\CodeReviewCai1.txt" />
-    <Content Include="CodeReviews\CodeReviewMaltsev1.txt" />
-    <Content Include="CodeReviews\CodeReviewXu1.txt" />
     <Content Include="Content\BrickPieces.png" />
     <Content Include="Content\OneUpMushroom.png" />
     <Content Include="Content\BlockSheet.png" />
