--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -89,7 +89,6 @@
     <Compile Include="ItemObjects\FireFlower.cs" />
     <Compile Include="ItemObjects\FireFlowerStates\Defeated.cs" />
     <Compile Include="ItemObjects\FireFlowerStates\Normal.cs" />
-    <Compile Include="ItemObjects\FireFlowerStates\Unveil.cs" />
     <Compile Include="ItemObjects\OneUpMushroom.cs" />
     <Compile Include="ItemObjects\OneUpMushroomStates\Defeated.cs" />
     <Compile Include="ItemObjects\OneUpMushroomStates\Normal.cs" />
@@ -107,6 +106,9 @@
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaDefeated.cs" />
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaJumpOn.cs" />
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaNormal.cs" />
+    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Sprites\BlockSprites\BlockAnimatedSprite.cs" />
     <Compile Include="Sprites\BlockSprites\BlockSilentSprite.cs" />
     <Compile Include="Sprites\BlockSprites\BrickPieceSprite.cs" />
@@ -170,8 +172,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CodeReviews\CodeReviewMaltsev1.txt" />
-    <Content Include="CodeReviews\CodeReviewXu1.txt" />
+    <Content Include="bin\Windows\x86\Debug\MelloMario.exe" />
+    <Content Include="bin\Windows\x86\Debug\MelloMario.pdb" />
     <Content Include="Content\BrickPieces.png" />
     <Content Include="Content\OneUpMushroom.png" />
     <Content Include="Content\BlockSheet.png" />
@@ -211,8 +213,152 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
+    <None Include="Content\bin\Windows\BlockSheet.xnb" />
+    <None Include="Content\bin\Windows\BrickPieces.xnb" />
+    <None Include="Content\bin\Windows\Coin.xnb" />
+    <None Include="Content\bin\Windows\Content\BlockSheet.xnb" />
+    <None Include="Content\bin\Windows\Content\BrickPieces.xnb" />
+    <None Include="Content\bin\Windows\Content\coin.xnb" />
+    <None Include="Content\bin\Windows\Content\Dead.xnb" />
+    <None Include="Content\bin\Windows\Content\FireCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\FireCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\fireFlower.xnb" />
+    <None Include="Content\bin\Windows\Content\FireIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\FireIdleRight.xnb" />
+    <None Include="Content\bin\Windows\Content\FireJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\FireJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\FireWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\FireWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\goomba.xnb" />
+    <None Include="Content\bin\Windows\Content\greenKoopa.xnb" />
+    <None Include="Content\bin\Windows\Content\OneUpMushroom.xnb" />
+    <None Include="Content\bin\Windows\Content\Question.xnb" />
+    <None Include="Content\bin\Windows\Content\RedKoopa.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardIdleRight.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\StandardWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\star.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperIdleRight.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperMushroom.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\Content\SuperWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\Dead.xnb" />
+    <None Include="Content\bin\Windows\FireCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\FireCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\FireFlower.xnb" />
+    <None Include="Content\bin\Windows\FireIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\FireIdleRight.xnb" />
+    <None Include="Content\bin\Windows\FireJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\FireJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\FireWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\FireWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\Goomba.xnb" />
+    <None Include="Content\bin\Windows\greenKoopa.xnb" />
+    <None Include="Content\bin\Windows\RedKoopa.xnb" />
+    <None Include="Content\bin\Windows\StandardIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\StandardIdleRight.xnb" />
+    <None Include="Content\bin\Windows\StandardJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\StandardJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\StandardWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\StandardWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\Star.xnb" />
+    <None Include="Content\bin\Windows\SuperCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\SuperCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\SuperIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\SuperIdleRight.xnb" />
+    <None Include="Content\bin\Windows\SuperJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\SuperJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\SuperWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\SuperWalkingRight.xnb" />
+    <None Include="Content\obj\Windows\.mgcontent" />
+    <None Include="Content\obj\Windows\BlockSheet.mgcontent" />
+    <None Include="Content\obj\Windows\BrickPieces.mgcontent" />
+    <None Include="Content\obj\Windows\Coin.mgcontent" />
+    <None Include="Content\obj\Windows\Content\.mgcontent" />
+    <None Include="Content\obj\Windows\Content\BlockSheet.mgcontent" />
+    <None Include="Content\obj\Windows\Content\BrickPieces.mgcontent" />
+    <None Include="Content\obj\Windows\Content\coin.mgcontent" />
+    <None Include="Content\obj\Windows\Content\Dead.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\fireFlower.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\FireWalkingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\goomba.mgcontent" />
+    <None Include="Content\obj\Windows\Content\greenKoopa.mgcontent" />
+    <None Include="Content\obj\Windows\Content\OneUpMushroom.mgcontent" />
+    <None Include="Content\obj\Windows\Content\Question.mgcontent" />
+    <None Include="Content\obj\Windows\Content\RedKoopa.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\StandardWalkingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\star.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperMushroom.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\Content\SuperWalkingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Dead.mgcontent" />
+    <None Include="Content\obj\Windows\FireCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\FireCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\FireFlower.mgcontent" />
+    <None Include="Content\obj\Windows\FireIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\FireIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\FireJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\FireJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\FireWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\FireWalkingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Goomba.mgcontent" />
+    <None Include="Content\obj\Windows\greenKoopa.mgcontent" />
+    <None Include="Content\obj\Windows\RedKoopa.mgcontent" />
+    <None Include="Content\obj\Windows\StandardIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\StandardIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\StandardJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\StandardJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\StandardWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\StandardWalkingRight.mgcontent" />
+    <None Include="Content\obj\Windows\Star.mgcontent" />
+    <None Include="Content\obj\Windows\SuperCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\SuperCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\SuperIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\SuperIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\SuperJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\SuperJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\SuperWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\SuperWalkingRight.mgcontent" />
+    <None Include="obj\x86\Release\MelloMario.csproj.CoreCompileInputs.cache" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="bin\Windows\x86\Release\" />
+    <Folder Include="MarioPlayerObject\" />
+    <Folder Include="MarioStates\Dead\" />
+    <Folder Include="MarioStates\Fire\Left\" />
+    <Folder Include="MarioStates\Fire\Right\" />
+    <Folder Include="MarioStates\Standard\Left\" />
+    <Folder Include="MarioStates\Standard\Right\" />
+    <Folder Include="MarioStates\Super\Left\" />
+    <Folder Include="MarioStates\Super\Right\" />
+    <Folder Include="PowerUps\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
