--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -82,7 +82,6 @@
     <Compile Include="Interfaces\IBlockState.cs" />
     <Compile Include="Interfaces\IItemState.cs" />
     <Compile Include="Interfaces\IKoopaState.cs" />
-    <Compile Include="Interfaces\IMarioState.cs" />
     <Compile Include="Interfaces\ISprite.cs" />
     <Compile Include="Interfaces\ISpriteFactory.cs" />
     <Compile Include="ItemObjects\Coin.cs" />
@@ -110,11 +109,11 @@
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaJumpOn.cs" />
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaNormal.cs" />
     <Compile Include="LevelGen\LevelReader.cs" />
-    <Compile Include="MarioObjects\DirectionStates\Direction.cs" />
+    <Compile Include="Interfaces\IMarioDirectionState.cs" />
     <Compile Include="MarioObjects\DirectionStates\DirectionRight.cs" />
     <Compile Include="MarioObjects\DirectionStates\DirectionLeft.cs" />
-    <Compile Include="MarioObjects\MovementStates\Movement.cs" />
-    <Compile Include="MarioObjects\PowerUpStates\PowerUp.cs" />
+    <Compile Include="Interfaces\IMarioMovementState.cs" />
+    <Compile Include="Interfaces\IMarioPowerUpState.cs" />
     <Compile Include="MarioObjects\PowerUpStates\PowerUpDead.cs" />
     <Compile Include="MarioObjects\PowerUpStates\PowerUpFire.cs" />
     <Compile Include="MarioObjects\PowerUpStates\PowerUpStandard.cs" />
