Rename functions and move files.

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -77,11 +77,11 @@
     <Compile Include="EnemyObjects\GoombaStates\GoombaDefeated.cs" />
     <Compile Include="EnemyObjects\GoombaStates\GoombaNormal.cs" />
     <Compile Include="Interfaces\ICommandFactory.cs" />
-    <Compile Include="Interfaces\IGoombaState.cs" />
+    <Compile Include="Interfaces\States\IGoombaState.cs" />
     <Compile Include="Interfaces\IGameObject.cs" />
-    <Compile Include="Interfaces\IBlockState.cs" />
-    <Compile Include="Interfaces\IItemState.cs" />
-    <Compile Include="Interfaces\IKoopaState.cs" />
+    <Compile Include="Interfaces\States\IBlockState.cs" />
+    <Compile Include="Interfaces\States\IItemState.cs" />
+    <Compile Include="Interfaces\States\IKoopaState.cs" />
     <Compile Include="Interfaces\ISprite.cs" />
     <Compile Include="Interfaces\ISpriteFactory.cs" />
     <Compile Include="ItemObjects\Coin.cs" />
@@ -109,11 +109,11 @@
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaJumpOn.cs" />
     <Compile Include="EnemyObjects\KoopaStates\RedKoopaNormal.cs" />
     <Compile Include="LevelGen\LevelReader.cs" />
-    <Compile Include="Interfaces\IMarioDirectionState.cs" />
+    <Compile Include="Interfaces\States\IMarioDirectionState.cs" />
     <Compile Include="MarioObjects\DirectionStates\DirectionRight.cs" />
     <Compile Include="MarioObjects\DirectionStates\DirectionLeft.cs" />
-    <Compile Include="Interfaces\IMarioMovementState.cs" />
-    <Compile Include="Interfaces\IMarioPowerUpState.cs" />
+    <Compile Include="Interfaces\States\IMarioMovementState.cs" />
+    <Compile Include="Interfaces\States\IMarioPowerUpState.cs" />
     <Compile Include="MarioObjects\PowerUpStates\PowerUpDead.cs" />
     <Compile Include="MarioObjects\PowerUpStates\PowerUpFire.cs" />
     <Compile Include="MarioObjects\PowerUpStates\PowerUpStandard.cs" />
