--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -47,21 +47,21 @@
     <Compile Include="BlockObjects\BrickStates\BrickBumped.cs" />
     <Compile Include="BlockObjects\BrickStates\BrickDestroyed.cs" />
     <Compile Include="BlockObjects\BrickStates\BrickHidden.cs" />
-    <Compile Include="BlockObjects\BrickStates\BrickSilent.cs" />
+    <Compile Include="BlockObjects\BrickStates\BrickNormal.cs" />
     <Compile Include="BlockObjects\BrickStates\BrickUsed.cs" />
     <Compile Include="BlockObjects\Floor.cs" />
     <Compile Include="BlockObjects\FloorStates\FloorHidden.cs" />
-    <Compile Include="BlockObjects\FloorStates\FloorSilent.cs" />
+    <Compile Include="BlockObjects\FloorStates\FloorNormal.cs" />
     <Compile Include="BlockObjects\Pipeline.cs" />
-    <Compile Include="BlockObjects\PipelineStates\PipelineSilent.cs" />
+    <Compile Include="BlockObjects\PipelineStates\PipelineNormal.cs" />
     <Compile Include="BlockObjects\Question.cs" />
     <Compile Include="BlockObjects\QuestionStates\QuestionBumped.cs" />
     <Compile Include="BlockObjects\QuestionStates\QuestionHidden.cs" />
-    <Compile Include="BlockObjects\QuestionStates\QuestionSilent.cs" />
+    <Compile Include="BlockObjects\QuestionStates\QuestionNormal.cs" />
     <Compile Include="BlockObjects\QuestionStates\QuestionUsed.cs" />
     <Compile Include="BlockObjects\Stair.cs" />
     <Compile Include="BlockObjects\StairStates\StairHidden.cs" />
-    <Compile Include="BlockObjects\StairStates\StairSilent.cs" />
+    <Compile Include="BlockObjects\StairStates\StairNormal.cs" />
     <Compile Include="BaseClasses\BaseCommand.cs" />
     <Compile Include="Commands\ActionCommand.cs" />
     <Compile Include="Commands\CrouchCommand.cs" />
