--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -197,15 +197,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MarioStates\Dead\" />
-    <Folder Include="MarioStates\Fire\Left\" />
-    <Folder Include="MarioStates\Fire\Right\" />
-    <Folder Include="MarioStates\Standard\Left\" />
-    <Folder Include="MarioStates\Standard\Right\" />
-    <Folder Include="MarioStates\Super\Left\" />
-    <Folder Include="MarioStates\Super\Right\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
