Add class BasePhysicalObject.

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -46,6 +46,7 @@
     <StartupObject>MelloMario.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BaseClasses\BasePhysicalObject.cs" />
     <Compile Include="BaseClasses\BaseGameObject.cs" />
     <Compile Include="BlockObjects\Brick.cs" />
     <Compile Include="BlockObjects\BrickStates\BrickBumped.cs" />
